@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.832 2007-07-24 22:09:39 castaglia Exp $
+$Id: NEWS,v 1.833 2007-07-31 15:17:12 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -16,6 +16,7 @@ CVS
 - Bug 2947 - SIGBUS on Mac OS X when dynamically loading shared libs.
 - Bug 2950 - Hostname with multiple IP addresses might cause "ai_family not
   supported" error if IPv6 support enabled.
+- Bug 2955 - Undeclared identifier MAP_FAILED for mod_delay on AIX.
 
 1.3.1rc3 - Released 04-Jul-2007
 --------------------------------
